# nanoarq

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  arq.h  b  bx  nanoarq.h  todo.txt
compilation_tests/: CMakeLists.txt  arq_compilation_test.c  arq_compilation_test.cpp  nanoarq_compilation_test.c  nanoarq_compilation_test.cpp
doc/: b  nanoarq-state-machine.tex  nanoarq.tex
functional_tests/: CMakeLists.txt  ack_full_window.cpp  ack_one_message.cpp  arq_context.cpp  arq_context.h  arq_in_functional_tests.c  arq_in_functional_tests.h  connect_simultaneous.cpp  connect_three_way_handshake.cpp  connect_times_out_after_n_attempts.cpp  decode_sent_frames.cpp  flush_tinygram.cpp  frame_serialization.cpp  functional_tests.h  lose_last_segment_in_message_triggers_nak.cpp  losing_final_segment_in_message_triggers_nak.cpp  losing_non_final_segment_triggers_nak.cpp  lost_ack_payload_retransmitted_already_received.cpp  main.cpp  manual_decode_ack_multiple_send_windows.cpp  manual_decode_full_send_window.cpp  nanoarq_functional_test.c  nanoarq_in_test_project.h  poll_until_tinygram_sends.cpp  recv_10mb_through_window.cpp  recv_1mb_through_recv_window.cpp  recv_full_frame_partial_frame_full_frame.cpp  recv_full_window.cpp  recv_full_window_in_one_call.cpp  recv_full_window_one_byte_at_a_time.cpp  recv_full_window_one_segment_at_a_time.cpp  retransmission_timers.cpp  send_10mb_through_window.cpp  send_1mb_through_send_subsystem.cpp  send_1mb_through_send_window.cpp  send_full_window.cpp  tiny_sends_accumulate_into_message.cpp  transfer_10mb_one_way.cpp  transfer_10mb_one_way_manual_acks.cpp  transfer_full_window_one_way.cpp  (+1 more)
samples/: CMakeLists.txt
samples/file_transfer/: CMakeLists.txt  file_transfer_arq.cpp  main.cpp
scripts/: get_cmake.sh  get_ninja.sh
unit_tests/: CMakeLists.txt  PltHookPlugin.cpp  PltHookPlugin.h  arq_in_unit_tests.c  arq_in_unit_tests.h  arq_mock_list.h  arq_runtime_mock_plugin.cpp  arq_runtime_mock_plugin.h  main.cpp  nanoarq.c  nanoarq_enable_mocks.h  nanoarq_hook_plugin.cpp  nanoarq_hook_plugin.h  nanoarq_in_c90_test_project.c  nanoarq_in_test_project.h  nanoarq_mocks.cpp  nanoarq_mocks.h  nanoarq_unit_test.c  nanoarq_unit_test.h  replace_arq_runtime_function.cpp  replace_arq_runtime_function.h  strict_mock_plugin.cpp  strict_mock_plugin.h  test_abs.cpp  test_asserts.cpp  test_backend_poll.cpp  test_backend_recv.cpp  test_backend_send.cpp  test_bool.cpp  test_check_cfg.cpp  test_cobs.cpp  test_conn_next_poll.cpp  test_conn_poll.cpp  test_conn_poll_state_cb_get.cpp  test_conn_poll_state_closed.cpp  test_conn_poll_state_established.cpp  test_conn_poll_state_rst_recvd.cpp  test_conn_poll_state_rst_sent.cpp  test_connect.cpp  test_connect_internal.cpp  (+33 more)
